add update item to product
