# routes/route.js
@@ -23,6 +23,7 @@ router.post('/products/create', product.create);
 router.post('/products/delete', product.delete);
 router.post('/products/update', product.update);
 router.post('/products/import', fileUpload(),  product.import);
+router.post('/products/importUpdate', fileUpload(),  product.importUpdate);
 router.post('/products/export', product.export);
 router.put('/products/image', product.uploadImg);
 router.delete('/products/image', product.deleteImg);
